tests/Rules/Anchor/Fixtures/valid/link_with_img_alt.html.twig
<html>
  <body>
    <a href="/foo"><img src="f.png" alt="Home"></a>
  </body>
</html>
