tests/Rules/Anchor/Fixtures/invalid/link_with_img_empty_alt.html.twig
{# 1 errors #}
<html>
  <body>
    <a href="/foo"><img src="f.png" alt=""></a>
  </body>
</html>
